# sakit

./: .gitignore  Info.plist  LICENSE  fileproperties.rc  libsakit.vcxproj  libsakit.vcxproj.filters  libsakit_2012.sln  libsakit_WinRT.sln  libsakit_WinRT.vcxproj  libsakit_WinRT.vcxproj.filters  libsakit_vs2012-winrt.sln  libsakit_vs2012.sln  libsakit_vs2013-winp8.sln  libsakit_vs2013-winrt.sln  libsakit_vs2015-uwp.sln  libsakit_vs2015.sln
android-studio/lib/: CMakeLists.txt  build.gradle
android-studio/lib/src/main/: AndroidManifest.xml
demos/demo_simple/: Package-uwp.appxmanifest  Package-vs2012.appxmanifest  Package-winp8.appxmanifest  (+7 more)
props/: v110-winrt.configuration.props  v110-winrt.default.props  v110.configuration.props
sakit.xcodeproj/: project.pbxproj
src/: AccepterThread.cpp  AccepterThread.h  Base.cpp  Bindable.cpp  Binder.cpp  BinderDelegate.cpp  BinderThread.cpp  BinderThread.h  BroadcasterThread.cpp  BroadcasterThread.h  Connector.cpp  ConnectorDelegate.cpp  ConnectorThread.cpp  ConnectorThread.h  Host.cpp  HttpResponse.cpp  HttpSocket.cpp  HttpSocketDelegate.cpp  HttpSocketThread.cpp  HttpSocketThread.h  HttpTcpSocketDelegate.cpp  HttpTcpSocketDelegate.h  Ip.cpp  IpSocket.cpp  NetworkAdapter.cpp  PlatformSocket.cpp  PlatformSocket.h  PlatformSocket_Sock.cpp  PlatformSocket_WinRT.cpp  ReceiverDelegate.cpp  ReceiverThread.cpp  ReceiverThread.h  SenderThread.cpp  SenderThread.h  Server.cpp  ServerDelegate.cpp  ServerThread.cpp  ServerThread.h  Socket.cpp  SocketBase.cpp  (+32 more)
util/: MB.py  multicast-send.py  multicast.py  send.py  tcp.py  udp.py
(+105 files in other folders)
